@startuml
' ========================
'     BUILDER API
' ========================
interface BuilderInit {
  +withInit((Int, Int)): BuilderGoal
}

interface BuilderGoal {
  +withGoal((Int, Int)): BuilderConstraints
}

interface BuilderConstraints {
  +withMaxMoves(Option[Int]): BuilderEnvironment
}

interface BuilderEnvironment {
  +withTiles(Scenario): BuilderDirections
}

interface BuilderDirections {
  +withDirections(List[Direction]): BuilderAlgorithm
}

interface BuilderAlgorithm {
  +withAlgorithm(Algorithm): CompleteBuilder
}

interface CompleteBuilder {
  +build(): Planner
}

class PlannerBuilderImpl {
  +withInit((Int, Int)): PlannerBuilderImpl
  +withGoal((Int, Int)): PlannerBuilderImpl
  +withMaxMoves(Option[Int]): PlannerBuilderImpl
  +withTiles(Scenario): PlannerBuilderImpl
  +withDirections(List[Direction]): PlannerBuilderImpl
  +withAlgorithm(Algorithm): PlannerBuilderImpl
  +build(): Planner
}

PlannerBuilderImpl ..|> BuilderInit
PlannerBuilderImpl ..|> BuilderGoal
PlannerBuilderImpl ..|> BuilderConstraints
PlannerBuilderImpl ..|> BuilderEnvironment
PlannerBuilderImpl ..|> BuilderDirections
PlannerBuilderImpl ..|> BuilderAlgorithm
PlannerBuilderImpl ..|> CompleteBuilder
@enduml